--- a/public/style.css
+++ b/public/style.css
@@ -1,26 +1,82 @@
-
 * {
-  padding: 0;
   margin: 0;
-	box-sizing: border-box;
-  font-size: 14px;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 body {
-  width: 100%;
-  min-height: 100vh;
-  background-color: rgb(243,243,243);
-  margin: 0;
-  padding: 10px;
-  display: flex;
+  background: linear-gradient(to bottom, #ffffff, #2f4f4f);
+  display: grid;
   justify-content: center;
-}
-ul li:before {
-    content: "\1F63A";
-    margin: 0 0.5em;
-    font-size: 14px;
+  align-items: center;
+  min-height: 100vh;
+  font-size: 16px;
+  background-image: url("https://www.papeiseparede.com.br/3257-large_default/papel-de-parede-whatsapp-branco-e-azul.jpg.webp");
 }
 
+.firstDiv {
+  flex-direction: column;
+  width: 50vw;
+  height: 40vh;
+  min-height: 30rem;
+  margin: 60px 0;
+  border: 1px solid black;
+  position: relative;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  box-shadow: 0px 10px 25px #333;
+  margin: 2%;
+  overflow-y: auto;
+  overflow-x: auto;
+}
+
+.firstDiv .leftSide {
+  background: #0a64ca;
+  padding: 30px;
+  
+}
+
+.firstDiv .rightSide {
+  background: #ffffff;
+  padding: 15px;
+ 
+}
+
+.leftItems {
+  margin-top: 10%;
+  color: #ffffff;
+}
+
+.leftItems .title {
+  padding-bottom: 8px;
+  
+}
+
+.rightItems {
+  margin-top: 32px;
+  font-weight: 600;
+  color: #2f4f4f;
+}
+
+.rightItems .title {
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+li{
+  background-color: rgb(158, 60, 255);
+  width: auto;
+  max-width: 100%;
+  padding: 10px;
+  margin: 10px; 
+  color: white;
+  border-radius: 50px;
+}
+ul li:before {
+  content: "\1F920";
+  margin: 0 0.5em;
+  font-size: 14px;
+}
 button {
   cursor: pointer;
 }
@@ -32,46 +88,20 @@ button:active {
 input:focus, button:focus {
   outline: none;
 }
-
-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 10px 0;
-  position: fixed;
-  font-size: 14px;
-  top: 550px;
-  left: 450px;
-}
-header * {
-  z-index: 1;
-}
-h1{
-  text-align: center;
-  position: absolute;
-  padding: -5px;
-
-}
-
-form {
-  position: relative;
-  width: 150%;
-}
-
 form input {
   border: 0;
   border-radius: 50px;
   font-size: 16px;
   padding: 15px 30px;
-  width: 100%;
+  width: 200%;
   font-size: 14px;
+  border: 2px solid black;
+  margin-left: -100%;
 }
-
 form button {
   position: absolute;
-  top: 2px;
-  right: 1px;
+  top: 5px;
+  right: -50%;
   background-color: #10cce0;
   border: 0;
   border-radius: 50px;
@@ -79,32 +109,8 @@ form button {
   font-size: 16px;
   padding: 13px 30px;
   font-size: 14px;
-  
 }
-
-li{
-  list-style: none;
-  background-color: rgb(158, 60, 255);
-  padding: 10px;
-  margin: 10px; 
-  color: white;
-
-}
-.segunda-div{
-    justify-content: space-around;
-    flex-direction: column;
-    width: 50%;
-    min-height: 34rem;
-}
-.continue{
-  flex-direction: column;
-  height: 500px;
-  max-width: 100%;
-  margin-bottom: 10px;
-  border: 1px solid black;
-  background-color: #47edff;
-  word-wrap: break-word;
-  overflow-y: auto;
-  overflow-x: auto;
- 
+footer{
+  bottom: 0;
+  position: fixed;
 }
